--- a/assets/style.css
+++ b/assets/style.css
@@ -27,4 +27,9 @@ ul {
 p {
     text-align: center;
     font-size: 30px;
+  }.card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid blue;
+    box-shadow: 5px 10px #888888;
   }
